# dmlite

./: CMakeLists.txt  Doxyfile-man.in  Doxyfile.in  README  RELEASE-NOTES
common/: CMakeLists.txt  Security.cpp  Uris.cpp
dmlite/trunk/: CMakeLists.txt  Doxyfile-man.in  Doxyfile.in
dmlite/trunk/common/: CMakeLists.txt  Security.cpp  Uris.cpp  Urls.cpp
dmlite/trunk/core/: Auth.cpp  CMakeLists.txt  Catalog-C.cpp  Catalog.cpp  Defaults.cpp  IO-C.cpp  IO.cpp  PluginManager-C.cpp  PluginManager.cpp  Pool-C.cpp  Private.h  StackInstance.cpp
dmlite/trunk/doc/: CMakeLists.txt
dmlite/trunk/etc/: CMakeLists.txt  dmlite.conf.in
dmlite/trunk/plugins/: CMakeLists.txt
dmlite/trunk/python/: CMakeLists.txt  authnwrapper.cpp  catalog.cpp  catalogwrapper.cpp  errno.cpp  extensible.cpp  helpers.cpp  inode.cpp  iowrapper.cpp  pooldriver.cpp  poolmanager.cpp  poolmanagerwrapper.cpp  pydmlite.cpp  sample.py  types.cpp
dmlite/trunk/scripts/: CMakeLists.txt
dmlite/trunk/src/: CMakeLists.txt
dmlite/trunk/tests/: CMakeLists.txt  DpmMySql.conf  NsOracle.conf  test-acls.cpp  test-base.cpp  test-base.h  test-chdir.cpp  test-chown.cpp  test-comment.cpp  test-create.cpp  test-extensible.cpp  test-guid.cpp  test-io.cpp  test-load.cpp  test-opendir.cpp  test-poolfs.cpp  test-pools.cpp  test-rename.cpp  test-replicas.cpp  test-security.cpp  test-split_path.cpp  test-split_url.cpp  test-stat.cpp
dmlite/trunk/tutorial/: backend_c.html  backend_cpp.html  backend_python.html  index.html  plugin.html
dmlite/trunk/utils/: Security.cpp
dmlite/trunk_pre7/etc/: CMakeLists.txt
plugins/hadoop/: CMakeLists.txt  Hadoop.cpp  Hadoop.h  hadoop-mysql.sql
plugins/memcache/: CMakeLists.txt  Memcache.cpp  Memcache.h  MemcacheCatalog.cpp  MemcacheCatalog.proto
plugins/mysql/: CMakeLists.txt  DpmMySql.cpp  DpmMySql.h  MySql.cpp  MySqlFactories.cpp  MySqlFactories.h  MySqlWrapper.cpp  MySqlWrapper.h  NsMySql.cpp  NsMySql.h  UserGroupDbMySql.cpp  UserGroupDbMySql.h  pooltype.sql
plugins/oracle/: CMakeLists.txt  NsOracle.cpp  NsOracle.h  OracleFactories.cpp  OracleFactories.h  Queries.h  UserGroupDbOracle.cpp
plugins/profiler/: CMakeLists.txt  Profiler.cpp  Profiler.h  ProfilerCatalog.cpp  ProfilerCatalog.h  ProfilerPoolManager.cpp  ProfilerPoolManager.h
plugins/s3/: CMakeLists.txt  S3.cpp  S3.h  s3driver.cpp  s3driver.h  s3objects.proto
python/embedding/src/: CMakeLists.txt  PythonCatalog.cpp  PythonCommon.cpp  PythonINode.cpp  PythonINodeFactories.cpp  PythonPoolDriver.cpp
src/: CMakeLists.txt
src/c/: Any-C.cpp  CMakeLists.txt  Catalog-C.cpp  IO-C.cpp  Inode-C.cpp  PluginManager-C.cpp  Pool-C.cpp  Private.h  Utils-C.cpp
src/core/: Auth.cpp  CMakeLists.txt  Defaults.cpp  Exceptions.cpp  PluginManager.cpp  StackInstance.cpp  Status.cpp
src/core/builtin/: Authn.cpp  Authn.h  Catalog.cpp  Catalog.h  UserGroupDb.cpp
src/core/c/: Catalog-C.cpp  Private.h
src/core/defaults/: authn.cpp  catalog.cpp  inode.cpp  io.cpp  pooldriver.cpp  poolmanager.cpp
src/core/dummy/: DummyCatalog.cpp  DummyPool.cpp
src/dome/: CMakeLists.txt  DavixPools.cpp  DavixPools.h  DomeChecksum.cpp  DomeCore.cpp  DomeCore.h  DomeCoreXeq.cpp  DomeDavixPool.cpp  DomeDmlitePool.cpp  DomeDmlitePool.h  DomeGenQueue.cpp  DomeGenQueue.h  DomeLog.h  DomeMain.cpp  DomeMetadataCache.cpp  DomeMetadataCache.hh  DomeMysql.cpp  DomeMysql.h  DomeMysql_authn.cpp  DomeMysql_cns.cpp  DomeReq.cpp  DomeReq.h  DomeStatus.cpp  DomeStatus.h  DomeTaskExec.cpp  DomeTaskExec.h  dome.conf  dpmrest.cpp  httpd.conf  zlcgdm-dav.conf
src/dome/cli/: README  dome.py  executor.py
src/dome/tests/: CMakeLists.txt  QueueTests.cpp  TestDomeTaskExec.cpp
src/plugins/: CMakeLists.txt
src/plugins/adapter/: Adapter.cpp  Adapter.h  CMakeLists.txt  DpmAdapter.cpp  FilesystemDriver.cpp  FilesystemDriver.h  FunctionWrapper.cpp  FunctionWrapper.h  IO.cpp  NsAdapter.cpp  NsAdapter.h  NsAdapterINode.cpp  RFIO.cpp  RFIO.h
src/plugins/config/: Config.cpp
src/plugins/domeadapter/: CMakeLists.txt  DomeAdapter.cpp  DomeAdapter.h  DomeAdapterAuthn.cpp  DomeAdapterAuthn.h  DomeAdapterCatalog.cpp  DomeAdapterCatalog.h  DomeAdapterDiskCatalog.cpp  DomeAdapterDiskCatalog.h  DomeAdapterDriver.cpp  DomeAdapterDriver.h  DomeAdapterHeadCatalog.cpp  DomeAdapterHeadCatalog.h  DomeAdapterIO.cpp  DomeAdapterIO.h  DomeAdapterIdMapCache.hh  DomeAdapterPools.cpp  DomeAdapterPools.h  DomeAdapterUtils.h  domeadapter.example
src/plugins/memcache/: CMakeLists.txt  Memcache.cpp  Memcache.h  Memcache.proto  MemcacheBloomFilter.cpp  MemcacheBloomFilter.h  MemcacheCatalog.cpp  MemcacheCatalog.h  MemcacheCatalog.proto  MemcacheCommon.cpp  MemcacheCommon.h  MemcacheFunctionCounter.cpp  MemcacheFunctionCounter.h  MemcacheFunctions.h  MemcachePoolManager.cpp  MemcachePoolManager.h  (+1 more)
src/utils/: CMakeLists.txt  Checksums.cpp  Config.cc  DavixPool.cpp  DavixPool.h  DomeTalker.cpp  DomeTalker.h  DomeUtils.h  Extensible.cpp  Logger.cpp  MySqlPools.cpp  MySqlWrapper.cpp  Security.cpp  Urls.cpp
tests/: CMakeLists.txt  DpmMySql.conf  MemcacheNsMySql.conf  NsAdapter.conf  NsMySql.conf  S3MySql.conf  test-acls.cpp  test-base.cpp  test-base.h  test-chdir.cpp  test-checkperm.cpp  test-checksum.cpp  test-chown.cpp  test-create.cpp  test-extensible.cpp  test-guid.cpp  test-hadoop.cpp  test-io.cpp  test-load.cpp  test-memcache.cpp  test-opendir.cpp  test-poolcontainer.cpp  test-pools.cpp  test-rename.cpp  test-replicas.cpp  test-s3.cpp  test-security.cpp  test-split_path.cpp  test-split_url.cpp  test-stat.cpp  test-utime.cpp
tests/c/: CMakeLists.txt  plugin_mock.cpp  plugin_mock.h  test-any.c  test-catalog.c  test-checksums.c  test-io.c  test-manager.c  test-pool.c  utils.h
tests/cpp/: CMakeLists.txt  DpmAdapter.conf  MemcacheNsMySql.conf  NsMySql.conf  NsOracle.conf  test-access.cpp  test-acls.cpp  test-authn.cpp  test-base.cpp  test-checksum.cpp  test-create.cpp  test-extensible.cpp  test-io.cpp  test-location.cpp  test-opendir.cpp  test-overwrite.cpp  test-pools.cpp  test-put.cpp  test-replicas.cpp  test-threaded.cpp  test-urlstring.cpp
tests/dpm/: dpm-tester.py
tests/python/: dm-rmdir.py
(+1499 files in other folders)
